ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.5
    • Affects Version/s: None
    • Component/s: Build
    • None
    • Fully Compatible
    • ALL
    • Build 5 06/26/16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Running scons lint with the current version of tar fails with this error:

      Downloading clang-format 3.6.0 from https://s3.amazonaws.com/boxes.10gen.com/build/clang-format-rhel55.tar.gz, saving to /tmp/temp.tar.xz
      tar: Pattern matching characters used in file names
      tar: Use --wildcards to enable pattern matching, or --no-wildcards to suppress this warning
      tar: *clang-format*: Not found in archive
      tar: Exiting with failure status due to previous errors
      scons: *** [lint] llvm/Release/bin/clang-format: No such file or directory
      scons: building terminated because of errors.
      

            Assignee:
            Jonathan Reams
            Reporter:
            Jonathan Reams
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: