SERVER-19070: Fix various clang-format issues