src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp
@@ -575,9 +575,7 @@ bool WiredTigerRecordStore::cappedAndNeedDelete() const {
 
 int64_t WiredTigerRecordStore::cappedDeleteAsNeeded(OperationContext* txn,
                                                     const RecordId& justInserted) {
-    // We only want to do the checks occasionally as they are expensive.
-    // This variable isn't thread safe, but has loose semantics anyway.
-    dassert(!_isOplog || _cappedMaxDocs == -1);
+    dassert(!_isActiveOplog);
 
     if (!cappedAndNeedDelete())
         return 0;
